Fixed the button spacing issue where the selection buttons were way too close to the gif.
Fixed the ip filter whitelisting so it now accounts for ipv6 loop-back local.

Made the generate daily workout target today if we are testing locally.

--- a/ui/src/app/exercise/exercise-display.module.scss
+++ b/ui/src/app/exercise/exercise-display.module.scss
@@ -14,7 +14,9 @@
   background-color: #0a2938;
   border-radius: 2rem;
   height: 5rem;
-  margin: 2rem;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .button-spacer {
