--- a/ui/src/app/pages/exercise-page/exercise-page.module.scss
+++ b/ui/src/app/pages/exercise-page/exercise-page.module.scss
@@ -8,7 +8,7 @@
 .buttons {
   display: flex;
   justify-content: space-between;
-  margin: .5rem;
+  margin: 2rem;
 }
 
 .spacer {
